# ethernetip-emulator

./: LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
example/: __init__.py  __main__.py  actions.py  tags.py
example/basic_datatypes/: __init__.py  __main__.py  actions.py  tags.py
example/datatypes/: __init__.py  mfgcontainer.py
example/mfg_line/: __init__.py  __main__.py  actions.py  tags.py
example/mfg_line/datatypes/: __init__.py  mfgcontainer.py
example/orange_pi/: __init__.py  __main__.py  actions.py  tags.py
example/raspberry_pi/: __init__.py  __main__.py  actions.py  tags.py
resources/: Kepware Export.csv  license_template.txt
scope/: __init__.py  actions.py  tags.py
src/ethernetip_emulator/server/: __init__.py  actions.py  device.py  tag_specs.py
src/server/: __init__.py  actions.py  device.py  tag_specs.py
src/server/actions/: __init__.py  actions.py  counter.py  increment.py  string.py  timer.py
src/server/datatypes/: __init__.py  bool.py  boolarray.py  counter.py  dint.py  dintarray.py  gpio.py  increment.py  int.py  intarray.py  lint.py  lintarray.py  lreal.py  lrealarray.py  real.py  realarray.py  sint.py  sintarray.py  sstring.py  sstringarray.py  string.py  timer.py  udint.py  udintarray.py  uint.py  uintarray.py  ulint.py  ulintarray.py  usint.py  usintarray.py
tests/: __init__.py  test_actions.py  test_device.py  test_tag_specs.py
tests/server/: __init__.py  test_actions.py  test_device.py  test_tag_specs.py
tests/server/datatypes/: test_array_datatypes.py  test_basic_datatypes.py  test_bool_datatype.py  test_counter.py  test_datatype_bool.py  test_datatype_counter.py  test_datatype_dint.py  test_datatype_gpio.py  test_datatype_increment.py  test_datatype_int.py  test_gpio.py  (+12 more)
(+44 files in other folders)
